Add Lake Formation permissions for Glue IAM role in YAML configuration

--- a/resource-one-repo/2.glue-code/glue.yaml
+++ b/resource-one-repo/2.glue-code/glue.yaml
@@ -82,3 +82,16 @@ Resources:
                     ForAllValues:StringEquals:
                       aws:TagKeys:
                       - aws-glue-service-resource
+
+    GlueLakeFormationPermissions:
+      Type: AWS::LakeFormation::Permissions
+      Properties:
+        DataLakePrincipal:
+          DataLakePrincipalIdentifier: !GetAtt GlueIAMRole.Arn
+        Resource:
+          DatabaseResource:
+            Name: raw_data
+        Permissions:
+          - DESCRIBE
+          - CREATE_TABLE
+          - ALTER
