Refactor Lake Formation permissions for Glue IAM role to separate raw and processed data resources

--- a/resource-one-repo/2.glue-code/glue.yaml
+++ b/resource-one-repo/2.glue-code/glue.yaml
@@ -83,7 +83,7 @@ Resources:
                       aws:TagKeys:
                       - aws-glue-service-resource
 
-    GlueLakeFormationPermissions:
+    GlueLakeFormationPermissionsRawData:
       Type: AWS::LakeFormation::Permissions
       Properties:
         DataLakePrincipal:
@@ -91,6 +91,19 @@ Resources:
         Resource:
           DatabaseResource:
             Name: raw_data
+        Permissions:
+          - DESCRIBE
+          - CREATE_TABLE
+          - ALTER
+
+    GlueLakeFormationPermissionsProcessedData:
+      Type: AWS::LakeFormation::Permissions
+      Properties:
+        DataLakePrincipal:
+          DataLakePrincipalIdentifier: !GetAtt GlueIAMRole.Arn
+        Resource:
+          DatabaseResource:
+            Name: processed_data
         Permissions:
           - DESCRIBE
           - CREATE_TABLE
