Add comments to clarify Lake Formation permissions for Glue IAM Role

--- a/resource-one-repo/2.glue-code/glue.yaml
+++ b/resource-one-repo/2.glue-code/glue.yaml
@@ -82,7 +82,8 @@ Resources:
                     ForAllValues:StringEquals:
                       aws:TagKeys:
                       - aws-glue-service-resource
-
+  # The Lake Formation Permissions for the Glue IAM Role
+  # the error was fixed when I added these permissions to the databases
     GlueLakeFormationPermissionsRawData:
       Type: AWS::LakeFormation::Permissions
       Properties:
