Add missing Lake Formation permissions for processed and raw data in Glue IAM Role

--- a/resource-one-repo/2.glue-code/glue.yaml
+++ b/resource-one-repo/2.glue-code/glue.yaml
@@ -96,6 +96,11 @@ Resources:
           - DESCRIBE
           - CREATE_TABLE
           - ALTER
+          - DROP
+          - DELETE
+          - INSERT
+          - SELECT
+          - UPDATE
 
     GlueLakeFormationPermissionsProcessedData:
       Type: AWS::LakeFormation::Permissions
@@ -109,3 +114,9 @@ Resources:
           - DESCRIBE
           - CREATE_TABLE
           - ALTER
+          - DROP
+          - DELETE
+          - INSERT
+          - SELECT
+          - UPDATE
+          
